# diktat

./: .gitignore  README.md  index.html  package-lock.json  package.json  plan.md  protoplan.txt
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  export.rs  lib.rs  main.rs  ollama.rs  recording.rs  runtime.rs  whisper.rs  workflow.rs
